// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup snapshots should render ButtonGroup 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp ButtonGroup"
    data-test-button-group=""
  >
    <div
      class="ButtonGroup__button"
      data-test-button-group-input="align-horizontal-left"
    >
      <div
        class="css-1jnxvbp ButtonGroup__icon Icon Icon--neutral-1"
        data-test-icon="align-horizontal-left"
        height="12"
        name="AlignHorizontalLeft"
        width="12"
      />
    </div>
    <div
      class="ButtonGroup__button"
      data-test-button-group-input="align-horizontal-center"
    >
      <div
        class="css-1jnxvbp ButtonGroup__icon Icon Icon--neutral-1"
        data-test-icon="align-horizontal-center"
        height="12"
        name="AlignHorizontalCenter"
        width="12"
      />
    </div>
    <div
      class="ButtonGroup__button"
      data-test-button-group-input="align-horizontal-right"
    >
      <div
        class="css-1jnxvbp ButtonGroup__icon Icon Icon--neutral-1"
        data-test-icon="align-horizontal-right"
        height="12"
        name="AlignHorizontalRight"
        width="12"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ButtonGroup snapshots should render with disabled states 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp ButtonGroup"
    data-test-button-group=""
  >
    <div
      class="ButtonGroup__button ButtonGroup__button--disabled"
      data-test-button-group-input="align-horizontal-left"
    >
      <div
        class="css-1jnxvbp ButtonGroup__icon ButtonGroup__icon--disabled Icon Icon--neutral-1"
        data-test-icon="align-horizontal-left"
        height="12"
        name="AlignHorizontalLeft"
        width="12"
      />
    </div>
    <div
      class="ButtonGroup__button ButtonGroup__button--disabled"
      data-test-button-group-input="align-horizontal-center"
    >
      <div
        class="css-1jnxvbp ButtonGroup__icon ButtonGroup__icon--disabled Icon Icon--neutral-1"
        data-test-icon="align-horizontal-center"
        height="12"
        name="AlignHorizontalCenter"
        width="12"
      />
    </div>
    <div
      class="ButtonGroup__button ButtonGroup__button--disabled"
      data-test-button-group-input="align-horizontal-right"
    >
      <div
        class="css-1jnxvbp ButtonGroup__icon ButtonGroup__icon--disabled Icon Icon--neutral-1"
        data-test-icon="align-horizontal-right"
        height="12"
        name="AlignHorizontalRight"
        width="12"
      />
    </div>
  </div>
</DocumentFragment>
`;
